chore: fix list hover state (it was messing up data explorer) and make page control left and right column gap bigger

--- a/src/Components/List/List.scss
+++ b/src/Components/List/List.scss
@@ -88,12 +88,14 @@ $list-item--background-dark: $c-pool;
 }
 
 .cf-list-item__active .cf-list-item--highlight__light,
-.cf-list-item__active:hover .cf-list-item--highlight__light {
+.cf-list-item__active:hover .cf-list-item--highlight__light,
+.cf-list-item__active:focus .cf-list-item--highlight__light {
   background-color: $list-item--background-light;
 }
 
 .cf-list-item__active .cf-list-item--highlight__dark,
-.cf-list-item__active:hover .cf-list-item--highlight__dark {
+.cf-list-item__active:hover .cf-list-item--highlight__dark,
+.cf-list-item__active:focus .cf-list-item--highlight__dark {
   background-color: $list-item--background-dark;
 }
 
