--- a/src/Components/Page/Page.scss
+++ b/src/Components/Page/Page.scss
@@ -108,20 +108,20 @@
 
 .cf-page-control-bar--left {
   > * {
-    margin-right: $cf-space-3xs;
+    margin-right: $cf-space-2xs;
   }
 }
 
 .cf-page-control-bar--center {
   > * {
-    margin-left: $cf-space-3xs / 2;
-    margin-right: $cf-space-3xs / 2;
+    margin-left: $cf-space-2xs / 2;
+    margin-right: $cf-space-2xs / 2;
   }
 }
 
 .cf-page-control-bar--right {
   > * {
-    margin-left: $cf-space-3xs;
+    margin-left: $cf-space-2xs;
   }
 }
 
